--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@
                 result = amount * 20;  
             }
 
-            document.getElementById('conversionResult').textContent = Resultado: ${result};
+            document.getElementById('conversionResult').textContent = `Resultado: ${result}`;
+
         }
     </script>
 </body>
